--- a/data_preproc/UO_Preproc.ipynb
+++ b/data_preproc/UO_Preproc.ipynb
@@ -257,21 +257,21 @@
    "outputs": [],
    "source": [
     "# Save the datasets\n",
-    "torch.save(train_A, os.path.join(os.getcwd(), 'UO', 'train_A.pt'))\n",
-    "torch.save(val_A, os.path.join(os.getcwd(), 'UO', 'val_A.pt'))\n",
-    "torch.save(test_A, os.path.join(os.getcwd(), 'UO', 'test_A.pt'))\n",
+    "torch.save(train_A, os.path.join(os.getcwd(), 'UO', 'train_U1.pt'))\n",
+    "torch.save(val_A, os.path.join(os.getcwd(), 'UO', 'val_U1.pt'))\n",
+    "torch.save(test_A, os.path.join(os.getcwd(), 'UO', 'test_U1.pt'))\n",
     "\n",
-    "torch.save(train_B, os.path.join(os.getcwd(), 'UO', 'train_B.pt'))\n",
-    "torch.save(val_B, os.path.join(os.getcwd(), 'UO', 'val_B.pt'))\n",
-    "torch.save(test_B, os.path.join(os.getcwd(), 'UO', 'test_B.pt'))\n",
+    "torch.save(train_B, os.path.join(os.getcwd(), 'UO', 'train_U2.pt'))\n",
+    "torch.save(val_B, os.path.join(os.getcwd(), 'UO', 'val_U2.pt'))\n",
+    "torch.save(test_B, os.path.join(os.getcwd(), 'UO', 'test_U2.pt'))\n",
     "\n",
-    "torch.save(train_C, os.path.join(os.getcwd(), 'UO', 'train_C.pt'))\n",
-    "torch.save(val_C, os.path.join(os.getcwd(), 'UO', 'val_C.pt'))\n",
-    "torch.save(test_C, os.path.join(os.getcwd(), 'UO', 'test_C.pt'))\n",
+    "torch.save(train_C, os.path.join(os.getcwd(), 'UO', 'train_U3.pt'))\n",
+    "torch.save(val_C, os.path.join(os.getcwd(), 'UO', 'val_U3.pt'))\n",
+    "torch.save(test_C, os.path.join(os.getcwd(), 'UO', 'test_U3.pt'))\n",
     "\n",
-    "torch.save(train_D, os.path.join(os.getcwd(), 'UO', 'train_D.pt'))\n",
-    "torch.save(val_D, os.path.join(os.getcwd(), 'UO', 'val_D.pt'))\n",
-    "torch.save(test_D, os.path.join(os.getcwd(), 'UO', 'test_D.pt'))"
+    "torch.save(train_D, os.path.join(os.getcwd(), 'UO', 'train_U4.pt'))\n",
+    "torch.save(val_D, os.path.join(os.getcwd(), 'UO', 'val_U4.pt'))\n",
+    "torch.save(test_D, os.path.join(os.getcwd(), 'UO', 'test_U4.pt'))"
    ]
   }
  ],
