--- a/data_preproc/UO_Preproc.ipynb
+++ b/data_preproc/UO_Preproc.ipynb
@@ -256,22 +256,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get parent directory\n",
+    "parent_dir = os.path.dirname(os.getcwd())\n",
+    "uo_dir = os.path.join(parent_dir, \"dataset\", \"UO\")\n",
+    "\n",
     "# Save the datasets\n",
-    "torch.save(train_A, os.path.join(os.getcwd(), 'UO', 'train_U1.pt'))\n",
-    "torch.save(val_A, os.path.join(os.getcwd(), 'UO', 'val_U1.pt'))\n",
-    "torch.save(test_A, os.path.join(os.getcwd(), 'UO', 'test_U1.pt'))\n",
+    "torch.save(train_A, os.path.join(uo_dir, 'train_U1.pt'))\n",
+    "torch.save(val_A, os.path.join(uo_dir, 'val_U1.pt'))\n",
+    "torch.save(test_A, os.path.join(uo_dir, 'test_U1.pt'))\n",
     "\n",
-    "torch.save(train_B, os.path.join(os.getcwd(), 'UO', 'train_U2.pt'))\n",
-    "torch.save(val_B, os.path.join(os.getcwd(), 'UO', 'val_U2.pt'))\n",
-    "torch.save(test_B, os.path.join(os.getcwd(), 'UO', 'test_U2.pt'))\n",
+    "torch.save(train_B, os.path.join(uo_dir, 'train_U2.pt'))\n",
+    "torch.save(val_B, os.path.join(uo_dir, 'val_U2.pt'))\n",
+    "torch.save(test_B, os.path.join(uo_dir, 'test_U2.pt'))\n",
     "\n",
-    "torch.save(train_C, os.path.join(os.getcwd(), 'UO', 'train_U3.pt'))\n",
-    "torch.save(val_C, os.path.join(os.getcwd(), 'UO', 'val_U3.pt'))\n",
-    "torch.save(test_C, os.path.join(os.getcwd(), 'UO', 'test_U3.pt'))\n",
+    "torch.save(train_C, os.path.join(uo_dir, 'train_U3.pt'))\n",
+    "torch.save(val_C, os.path.join(uo_dir, 'val_U3.pt'))\n",
+    "torch.save(test_C, os.path.join(uo_dir, 'test_U3.pt'))\n",
     "\n",
-    "torch.save(train_D, os.path.join(os.getcwd(), 'UO', 'train_U4.pt'))\n",
-    "torch.save(val_D, os.path.join(os.getcwd(), 'UO', 'val_U4.pt'))\n",
-    "torch.save(test_D, os.path.join(os.getcwd(), 'UO', 'test_U4.pt'))"
+    "torch.save(train_D, os.path.join(uo_dir, 'train_U4.pt'))\n",
+    "torch.save(val_D, os.path.join(uo_dir, 'val_U4.pt'))\n",
+    "torch.save(test_D, os.path.join(uo_dir, 'test_U4.pt'))"
    ]
   }
  ],
